# org-readwise-rust

./: .env.template  Cargo.toml  README.md
assets/: 20241203194904-24-theses-on-cybersecurity-and-ai.org
config/: config.toml
src/: main.rs  org_roam.rs  readwise_api.rs  settings.rs  util.rs
templates/: article.org.tera  document.org.tera  highlights.tera
