[package]
name = "org-readwise-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
config = { version = "0.14.1", features = ["toml"] }
dotenv = "0.15.0"
md5 = "0.7.0"
once_cell = "1.20.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
slug = "0.1.6"
tera = "1.20.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
